# agroMind2

./: .env  .env.example  .gitignore  app.json  package.json  pnpm-lock.yaml
ai_service/: Dockerfile
app/: +not-found.tsx  _layout.tsx  frost-detail.tsx  onboarding.tsx
backend/: .env.example  Dockerfile  README.md  nixpacks.toml  railway.json  requirements.txt
components/: AIModelsCard.tsx  AIRiskGrid.tsx  AnimatedNumber.tsx  ClimateHistoryChart.tsx  ClimateScoreCard.tsx  DiseaseRiskCard.tsx  FieldAdvisorCard.tsx  FieldStatsCard.tsx  FrostPredictionCard.tsx  LanguageToggle.tsx  NDVICard.tsx  PlantingDateCard.tsx  PredictionCard.tsx  Pulseindicator.tsx  ROISavingsCard.tsx  SkeletonCard.tsx  SmartIrrigationCard.tsx  SubsidyMatchCard.tsx  WeatherChart.tsx
constants/: ipard.ts  mockData.ts  theme.ts
hooks/: useAgroPredictHealth.ts  useAppLanguage.ts  (+11 more)
safevision-ai/ai_service/: pyproject.toml
safevision-ai/ai_service/service/: config.py  main.py
safevision-ai/ai_service/service/detectors/: bullying.py  violence.py  weapon.py
safevision-ai/ai_service/service/processors/: stream.py
safevision-ai/ai_service/service/trackers/: deep_sort.py
safevision-ai/backend/: alembic.ini  pyproject.toml
safevision-ai/backend/alembic/: env.py
safevision-ai/backend/app/: main.py
safevision-ai/backend/app/api/routes/: analytics.py  auth.py  incidents.py  locations.py  organizations.py
safevision-ai/backend/app/core/: config.py
safevision-ai/backend/app/models/: camera.py  incident.py  location.py  risk.py  user.py
safevision-ai/backend/app/schemas/: auth.py  camera.py  incident.py  location.py  user.py
safevision-ai/backend/app/services/: alert_service.py  risk_service.py
safevision-ai/backend/app/websocket/: manager.py
(+84 files in other folders)
