[project]
name = "safevision-ai-service"
version = "0.1.0"
description = "SafeVision AI - Inference Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.3.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
